A11y: Fixed color contrast issue in Settings Error log

--- a/ui/apps/io.ox/settings/style.less
+++ b/ui/apps/io.ox/settings/style.less
@@ -452,7 +452,7 @@
 
         .datetime {
             float: right;
-            color: #888;
+            color: #767676;
         }
 
         .toggle-request-body {
@@ -470,7 +470,7 @@
 
         .chart-description, .empty, .url {
             font-style: italic;
-            color: #888;
+            color: #767676;
         }
 
         .empty { padding: 0 13px; }
